# Otis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default_config.yaml
scripts/: build_app.sh  check_phase2.py  list_calendars.py  list_devices.py  probe_mic.py  regenerate_icons.py  retranscribe.py  run.sh  setup.sh  setup_blackhole.sh  setup_google_cal.sh  smoke_process_monitor.py  smoke_record.py  stress_test.py
src/: __init__.py  config.py  daemon.py  main.py  pipeline.py  schedule.py
src/audio/: __init__.py  blackhole_check.py  coreaudio_probe.py  devices.py  recorder.py  wav_repair.py
src/detection/: __init__.py  calendar_poller.py  detector.py  process_monitor.py
src/mcp/: __init__.py  core.py  server.py
src/storage/: __init__.py  audio_retention.py  transcript_store.py
src/transcription/: __init__.py  processor.py  titling.py  whisper_engine.py
src/ui/: __init__.py  icons.py  menubar.py  notifications.py
src/web/: __init__.py  server.py
tests/: conftest.py  test_config.py  test_daemon.py  test_pipeline.py  test_schedule.py
tests/audio/: test_blackhole_check.py  test_devices.py  test_recorder.py  test_wav_repair.py
tests/detection/: test_calendar_poller.py  test_detector.py  test_process_monitor.py
tests/mcp/: test_core.py  test_server.py
tests/storage/: test_audio_retention.py  test_transcript_store.py
tests/transcription/: test_processor.py  test_titling.py  test_whisper_engine.py
tests/ui/: test_icons.py  test_menubar_app.py  test_menubar_helpers.py  test_notifications.py  test_orphan_sessions.py
tests/web/: test_server.py
